Kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: static-web
  labels:
    role: myrole
spec:
  containers:
    - name: web
      image: busybox:1.34
      imagePullPolicy: IfNotPresent
      command:
        - sh
        - -c
        args:
        - |-
          while true; do sleep 1; done
