Kubernetes/service.yaml

apiVersion: v1
kind: Service
metadata:
  name:  Service Name
  labels:
    role: myrole
spec:
  selector:
    app:  Selector Label
  type:  LoadBalancer | ClusterIP | NodePort
  ports:
  - name:  name-of-the-port
    port:  80
    targetPort:  8080
